// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompressionPlugin should run plugin against assets added later by plugins: assets 1`] = `
Array [
  Array [
    "main.js",
    2968,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 2968,
    },
  ],
  Array [
    "main.js.gz",
    866,
    Object {
      "compressed": true,
      "size": 866,
    },
  ],
  Array [
    "newFile.js",
    23,
    Object {
      "related": Object {
        "gzipped": "newFile.js.gz",
      },
      "size": 23,
    },
  ],
  Array [
    "newFile.js.gz",
    43,
    Object {
      "compressed": true,
      "size": 43,
    },
  ],
]
`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: errors 1`] = `Array []`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 1`] = `
Array [
  Array [
    "async.async.js",
    193,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "async.async.js.gz",
    133,
    Object {
      "compressed": true,
      "size": 133,
    },
  ],
  Array [
    "icon.png",
    78117,
    Object {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "icon.svg",
    672,
    Object {
      "related": Object {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "icon.svg.gz",
    393,
    Object {
      "compressed": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    15742,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15742,
    },
  ],
  Array [
    "main.js.gz",
    3870,
    Object {
      "compressed": true,
      "size": 3870,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 2`] = `
Array [
  Array [
    "async.async.js",
    193,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "async.async.js.gz",
    133,
    Object {
      "compressed": true,
      "size": 133,
    },
  ],
  Array [
    "icon.png",
    78117,
    Object {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "icon.svg",
    672,
    Object {
      "related": Object {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "icon.svg.gz",
    393,
    Object {
      "compressed": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    15742,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15742,
    },
  ],
  Array [
    "main.js.gz",
    3870,
    Object {
      "compressed": true,
      "size": 3870,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 1`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 2`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and keep assets info: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.27008663fa31c77100af.js",
    193,
    Object {
      "contenthash": "27008663fa31c77100af",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.27008663fa31c77100af.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "async.async.27008663fa31c77100af.js.gz",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "main.3901817e3ed5284b5443.js",
    15829,
    Object {
      "contenthash": "3901817e3ed5284b5443",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.3901817e3ed5284b5443.js.gz",
      },
      "size": 15829,
    },
  ],
  Array [
    "main.3901817e3ed5284b5443.js.gz",
    3955,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3955,
    },
  ],
]
`;

exports[`CompressionPlugin should work and keep assets info: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and keep assets info: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and show compress assets in stats: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js",
    193,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "async.async.js.gz",
    133,
    Object {
      "compressed": true,
      "size": 133,
    },
  ],
  Array [
    "main.js",
    15798,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15798,
    },
  ],
  Array [
    "main.js.gz",
    3934,
    Object {
      "compressed": true,
      "size": 3934,
    },
  ],
]
`;

exports[`CompressionPlugin should work and show compress assets in stats: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and show compress assets in stats: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    193,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "async.js.gz",
    133,
    Object {
      "compressed": true,
      "size": 133,
    },
  ],
  Array [
    "main.js",
    15782,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15782,
    },
  ],
  Array [
    "main.js.gz",
    3930,
    Object {
      "compressed": true,
      "size": 3930,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    193,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "async.js.gz",
    133,
    Object {
      "compressed": true,
      "size": 133,
    },
  ],
  Array [
    "main.js",
    15804,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15804,
    },
  ],
  Array [
    "main.js.gz",
    3941,
    Object {
      "compressed": true,
      "size": 3941,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    193,
    Object {
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "async.js.br",
    125,
    Object {
      "compressed": true,
      "size": 125,
    },
  ],
  Array [
    "async.js.custom",
    193,
    Object {
      "compressed": true,
      "size": 193,
    },
  ],
  Array [
    "async.js.gz",
    133,
    Object {
      "compressed": true,
      "size": 133,
    },
  ],
  Array [
    "main.js",
    15782,
    Object {
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 15782,
    },
  ],
  Array [
    "main.js.br",
    3435,
    Object {
      "compressed": true,
      "size": 3435,
    },
  ],
  Array [
    "main.js.custom",
    15782,
    Object {
      "compressed": true,
      "size": 15782,
    },
  ],
  Array [
    "main.js.gz",
    3930,
    Object {
      "compressed": true,
      "size": 3930,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    193,
    Object {
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "async.js.br",
    125,
    Object {
      "compressed": true,
      "size": 125,
    },
  ],
  Array [
    "async.js.custom",
    193,
    Object {
      "compressed": true,
      "size": 193,
    },
  ],
  Array [
    "async.js.gz",
    133,
    Object {
      "compressed": true,
      "size": 133,
    },
  ],
  Array [
    "main.js",
    15782,
    Object {
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 15782,
    },
  ],
  Array [
    "main.js.br",
    3435,
    Object {
      "compressed": true,
      "size": 3435,
    },
  ],
  Array [
    "main.js.custom",
    15782,
    Object {
      "compressed": true,
      "size": 15782,
    },
  ],
  Array [
    "main.js.gz",
    3930,
    Object {
      "compressed": true,
      "size": 3930,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    193,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "async.js.gz",
    133,
    Object {
      "compressed": true,
      "size": 133,
    },
  ],
  Array [
    "main.js",
    15782,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15782,
    },
  ],
  Array [
    "main.js.gz",
    3930,
    Object {
      "compressed": true,
      "size": 3930,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.js",
    193,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "async.js.gz",
    133,
    Object {
      "compressed": true,
      "size": 133,
    },
  ],
  Array [
    "main.js",
    15782,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15782,
    },
  ],
  Array [
    "main.js.gz",
    3930,
    Object {
      "compressed": true,
      "size": 3930,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    193,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js",
    15829,
    Object {
      "chunkhash": "a6299e4b54bcb458b330",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.a6299e4b54bcb458b330.js.gz",
      },
      "size": 15829,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js.gz",
    3957,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3957,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    193,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js",
    15829,
    Object {
      "chunkhash": "a6299e4b54bcb458b330",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.a6299e4b54bcb458b330.js.gz",
      },
      "size": 15829,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js.gz",
    3957,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3957,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 2`] = `Array []`;

exports[`CompressionPlugin should work child compilations: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.gz",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "async.async.js?ver=868541dbc182fcaf842e",
    193,
    Object {
      "fullhash": "868541dbc182fcaf842e",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "copied.js",
    400,
    Object {
      "copied": true,
      "related": Object {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  Array [
    "copied.js.gz",
    29,
    Object {
      "compressed": true,
      "size": 29,
    },
  ],
  Array [
    "main.js.gz",
    3978,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3978,
    },
  ],
  Array [
    "main.js?var=868541dbc182fcaf842e",
    15985,
    Object {
      "fullhash": "868541dbc182fcaf842e",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15985,
    },
  ],
]
`;

exports[`CompressionPlugin should work child compilations: errors 1`] = `Array []`;

exports[`CompressionPlugin should work child compilations: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work with assets info: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.gz",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "async.async.js?ver=f964739ef2971762249c",
    193,
    Object {
      "fullhash": "f964739ef2971762249c",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "copied.js",
    400,
    Object {
      "copied": true,
      "related": Object {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  Array [
    "copied.js.gz",
    29,
    Object {
      "compressed": true,
      "size": 29,
    },
  ],
  Array [
    "main.js.gz",
    4014,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4014,
    },
  ],
  Array [
    "main.js.map.gz",
    4116,
    Object {
      "compressed": true,
      "size": 4116,
    },
  ],
  Array [
    "main.js.map?var=f964739ef2971762249c",
    12951,
    Object {
      "development": true,
      "related": Object {
        "gzipped": "main.js.map.gz",
      },
      "size": 12951,
    },
  ],
  Array [
    "main.js?var=f964739ef2971762249c",
    16046,
    Object {
      "fullhash": "f964739ef2971762249c",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
        "sourceMap": "main.js.map?var=f964739ef2971762249c",
      },
      "size": 16046,
    },
  ],
]
`;

exports[`CompressionPlugin should work with assets info: errors 1`] = `Array []`;

exports[`CompressionPlugin should work with assets info: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work with multiple plugins: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "compressed": "09a1a1112c577c2794359715edfcb5ac.png.compress",
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.compress",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "compressed": "23fc1d3ac606d117e05a140e0de79806.svg.compress",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.compress",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.br",
    125,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 125,
    },
  ],
  Array [
    "async.async.js.compress",
    193,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 193,
    },
  ],
  Array [
    "async.async.js.custom?foo=bar#hash",
    193,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 193,
    },
  ],
  Array [
    "async.async.js.gz",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "async.async.js?ver=8b644dc8a959875e39cf",
    193,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "async.async.js.br",
        "compressed": "async.async.js.compress",
        "customed": "async.async.js.custom?foo=bar#hash",
        "gzipped": "async.async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "main.js.br",
    3480,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3480,
    },
  ],
  Array [
    "main.js.compress",
    15988,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 15988,
    },
  ],
  Array [
    "main.js.custom?foo=bar#hash",
    15988,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 15988,
    },
  ],
  Array [
    "main.js.gz",
    3984,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3984,
    },
  ],
  Array [
    "main.js?var=8b644dc8a959875e39cf",
    15988,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "main.js.br",
        "compressed": "main.js.compress",
        "customed": "main.js.custom?foo=bar#hash",
        "gzipped": "main.js.gz",
      },
      "size": 15988,
    },
  ],
]
`;

exports[`CompressionPlugin should work with multiple plugins: errors 1`] = `Array []`;

exports[`CompressionPlugin should work with multiple plugins: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.gz",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "async.async.js?ver=8b644dc8a959875e39cf",
    193,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "main.js.gz",
    3984,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3984,
    },
  ],
  Array [
    "main.js?var=8b644dc8a959875e39cf",
    15988,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 15988,
    },
  ],
]
`;

exports[`CompressionPlugin should work: errors 1`] = `Array []`;

exports[`CompressionPlugin should work: warnings 1`] = `Array []`;
